--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
+    "koa-helmet": "^4.0.0",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.3.0",
     "koa-session": "^5.8.1",
