refactor: Move assets to public
Fix render-page middleware
Fix issues based on lighthouse audits

--- a/server/config.yml
+++ b/server/config.yml
@@ -4,10 +4,10 @@
 host: 127.0.0.1
 port: 8000
 
-favicon: src/assets/favicon.ico
+favicon: public/favicon.ico
 
 static:
-  /assets: src/assets
+  /: public
   /locales: src/locales
   development:
     /build: build
