feat: Api request add auth token
Refactor http request agent
Refactor server side api route, base store request proxy
Config.yml add clientId, clientSecret, accessToken keys

--- a/server/config.yml
+++ b/server/config.yml
@@ -25,3 +25,10 @@ socketUrl: ''
 # client side config
 app:
   title: 'OpenPitrix Dashboard'
+
+# authorization config
+clientId: ''
+clientSecret: ''
+
+# saved access_token
+accessToken: ''
