--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.6.0",
     "rc-table": "^6.1.2",
     "react": "^16.2.0",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.2.0",
     "react-i18next": "^7.7.0",
     "react-markdown": "^3.3.4",
