--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next-browser-languagedetector": "^2.2.3",
     "js-base64": "^2.4.5",
     "js-yaml": "^3.10.0",
+    "json2yaml": "^1.1.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
