--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "dev:client": "rimraf build && NODE_ENV=development webpack --config webpack.dev.js --progress",
-    "server": "DEBUG=op-dash,koa-router BABEL_ENV=server NODE_ENV=development node server/server.js",
+    "server": "DEBUG=op-dash BABEL_ENV=server NODE_ENV=development node server/server.js",
     "dev:watch": "npm run dev:client -- --watch",
     "dev": "rimraf build && npm run dev:client && npm run server",
     "prod:build": "rimraf dist && NODE_ENV=production webpack -p --config webpack.prod.js",
