--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
   },
   "scripts": {
     "dev:client": "rimraf build && NODE_ENV=development webpack --config webpack.dev.js --progress",
-    "server": "DEBUG=op-dash BABEL_ENV=server NODE_ENV=development node server/server.js",
+    "pack:server": "webpack --config webpack.server.js --progress",
+    "server": "DEBUG_DEPTH=5 DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
     "dev:watch": "npm run dev:client -- --watch",
     "dev": "rimraf build && npm run dev:client && npm run server",
     "prod:build": "rimraf dist && NODE_ENV=production webpack -p --config webpack.prod.js",
-    "prod:serve": "NODE_ENV=production DEBUG=op-dash node dist/server.js",
+    "prod:serve": "NODE_ENV=production DEBUG=app node dist/server.js",
     "prod": "npm run prod:build && npm run prod:serve",
     "lint": "eslint . --fix",
     "test:single": "NODE_ENV=testing jest --config jest.config.json -u",
@@ -79,7 +80,7 @@
     "babel-jest": "^22.0.6",
     "babel-loader": "7.1.1",
     "babel-plugin-css-modules-transform": "^1.5.0",
-    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
@@ -109,6 +110,7 @@
     "koa-webpack": "^2.0.3",
     "lint-staged": "^7.0.4",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.18.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
