--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lint-fix": "eslint . --fix",
     "test": "jest --config jest.config.json -u",
     "precommit": "npm test && lint-staged",
+    "lint-check": "eslint --print-config . | eslint-config-prettier-check",
     "viz": "webpack --config webpack.dev.js --profile --progress --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
     "report-cov": "cat ./coverage/lcov.info | codecov",
     "dbg": "BABEL_ENV=server NODE_ENV=development node --inspect-brk server/server.js",
@@ -100,6 +101,7 @@
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.1.0",
