refactor: Upgrade react to v16.6
Upgrade react-dom, mobx-react, webpack

Upgrade enzyme-adapter-react-16 to compat with react

Rename src/pages/Admin to Dashboard

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "koa-static": "^4.0.2",
     "lodash": "^4.17.5",
     "mobx": "^5.1.0",
-    "mobx-react": "^5.2.6",
+    "mobx-react": "^5.3.6",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
     "rc-table": "^6.1.2",
-    "react": "^16.2.0",
+    "react": "^16.6.0",
     "react-codemirror": "^1.0.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.6.0",
     "react-i18next": "^7.7.0",
     "react-markdown": "^3.3.4",
     "react-modal": "^3.3.1",
@@ -47,7 +47,7 @@
   "scripts": {
     "dev:client": "NODE_ENV=development webpack --config webpack.dev.js --progress",
     "dev:serve": "DEBUG_DEPTH=5 DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
-    "dev": "npm run clean:dev && npm-run-all -p dev:serve 'dev:client -- --watch'",
+    "dev": "npm-run-all -p dev:serve 'dev:client --watch'",
     "clean:dev": "rimraf build",
     "clean:prod": "rimraf dist",
     "prod:build": "npm run clean:prod && NODE_ENV=production webpack -p --config webpack.prod.js",
@@ -92,7 +92,7 @@
     "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^11.3.1",
@@ -121,9 +121,9 @@
     "testcafe": "^0.20.4",
     "testcafe-react-selectors": "^2.1.0",
     "url-loader": "0.5.9",
-    "webpack": "^4.17.1",
+    "webpack": "^4.23.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^3.1.0",
+    "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.7.2"
   },
   "engines": {
