--- a/package.json
+++ b/package.json
@@ -121,9 +121,9 @@
     "testcafe": "^0.20.4",
     "testcafe-react-selectors": "^2.1.0",
     "url-loader": "0.5.9",
-    "webpack": "^4.23.1",
+    "webpack": "4.17.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "3.1.0",
     "webpack-node-externals": "^1.7.2"
   },
   "engines": {
