refactor: Upgrade babel to v7, enhance perfermance
Deprecate e2e code

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.1.5",
     "app-root-path": "^2.0.1",
-    "babel-runtime": "^6.26.0",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
     "clipboard": "^2.0.1",
@@ -56,12 +56,11 @@
     "build:prod-client": "node build.js --prod-client",
     "build:prod-server": "node build.js --prod-server",
     "lint-fix": "eslint . --fix",
-    "test": "NODE_ENV=testing jest --config jest.config.json -u",
+    "test": "jest --config jest.config.json -u",
     "precommit": "npm test && lint-staged",
     "viz": "webpack --config webpack.dev.js --profile --progress --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
     "report-cov": "cat ./coverage/lcov.info | codecov",
     "dbg": "BABEL_ENV=server NODE_ENV=development node --inspect-brk server/server.js",
-    "e2e": "testcafe chrome test/e2e/*.spec.js --debug-on-fail --page-load-timeout 5000",
     "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS",
     "release": "standard-version -i CHANGELOG.md -n"
   },
@@ -72,22 +71,26 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@commitlint/cli": "^7.0.0",
     "autoprefixer": "7.1.2",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.0.6",
-    "babel-loader": "7.1.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-css-modules-transform": "^1.5.0",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^3.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-register": "^6.26.0",
     "codecov": "^3.0.2",
     "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^0.28.11",
@@ -104,7 +107,7 @@
     "file-loader": "^1.1.6",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23",
+    "jest": "^23.6.0",
     "lint-staged": "^7.0.4",
     "node-sass": "^4.5.3",
     "nodemon": "^1.18.4",
@@ -118,8 +121,6 @@
     "sass-loader": "^6.0.6",
     "standard-version": "^4.4.0",
     "style-loader": "^0.19.1",
-    "testcafe": "^0.20.4",
-    "testcafe-react-selectors": "^2.1.0",
     "url-loader": "0.5.9",
     "webpack": "4.17.1",
     "webpack-bundle-analyzer": "^2.11.1",
