--- a/.babelrc
+++ b/.babelrc
@@ -1,28 +1,44 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "node": "7.6",
-        "browser": ["> 1%", "last 4 versions", "not ie < 9"]
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": true,
+          "browsers": [
+            "> 1%",
+            "last 2 versions",
+            "not ie < 9"
+          ]
+        }
       }
-    }],
-    "stage-1",
-    "react"
+    ],
+    "@babel/preset-react"
   ],
   "plugins": [
-    "transform-runtime",
-    "transform-decorators-legacy",
-    "lodash",
+    "@babel/plugin-transform-runtime",
     [
       "module-resolver",
       {
         "root": [
           "./",
-          "./src/**"
+          "./src"
         ]
       }
-    ]
+    ],
+    "lodash",
+    ["@babel/plugin-proposal-decorators", {
+      "legacy": true
+    }],
+    ["@babel/plugin-proposal-class-properties", {
+      "loose": true
+    }],
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-export-default-from"
   ],
+  // let babel guess commonjs module, dont treat it as esm
+  // see: https://github.com/webpack/webpack/issues/4039
+  "sourceType": "unambiguous",
   "env": {
     "production": {
       "plugins": [
@@ -43,9 +59,17 @@
           "css-modules-transform",
           {
             "generateScopedName": "[folder]__[local]--[hash:base64:5]",
-            "extensions": [".css", ".scss"]
+            "extensions": [
+              ".css",
+              ".scss"
+            ]
           }
         ]
+      ]
+    },
+    "test": {
+      "plugins": [
+        "dynamic-import-node"
       ]
     }
   }
