--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
     "webpack": "4.17.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "3.1.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpack-notifier": "^1.7.0"
   },
   "engines": {
     "node": ">= 7.6.0"
