fix: App detail broken doc link
RootStore add getAppConfig

--- a/server/config.yml
+++ b/server/config.yml
@@ -22,13 +22,12 @@ serverUrl: ''
 # socket server
 socketUrl: ''
 
-# client side config
-app:
-  title: 'OpenPitrix Dashboard'
-
 # authorization config
 clientId: ''
 clientSecret: ''
 
-# saved access_token
-accessToken: ''
+# client side config
+app:
+  title: 'OpenPitrix Dashboard'
+  doc_link: 'https://docs.openpitrix.io/v0.3/zh-CN/developer-guide/openpitrix-developer-guide/'
+
