--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mobx-react": "^5.3.6",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
+    "query-string": "^6.2.0",
     "rc-table": "^6.1.2",
     "react": "^16.6.0",
     "react-codemirror": "^1.0.0",
