feat: Add storybook

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "build:prod-server": "node build.js --prod-server",
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest --config jest.config.json -u",
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "precommit": "npm test && lint-staged",
     "viz": "webpack --config webpack.dev.js --profile --progress --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
     "report-cov": "cat ./coverage/lcov.info | codecov",
@@ -82,6 +83,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@commitlint/cli": "^7.0.0",
+    "@storybook/addon-storysource": "^4.1.4",
+    "@storybook/react": "^4.1.4",
     "autoprefixer": "7.1.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
@@ -108,7 +111,7 @@
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "lint-staged": "^7.0.4",
+    "lint-staged": "^7.2.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
