--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
     "codecov": "^3.0.2",
+    "commander": "^2.19.0",
     "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
