feat: Download app version package file from browser

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.7.4",
     "debug": "^3.1.0",
     "deepmerge": "^2.1.0",
+    "file-saver": "^2.0.0",
     "i18next": "^11.3.3",
     "i18next-browser-languagedetector": "^2.2.3",
     "js-base64": "^2.4.5",
