--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-router-dom": "^4.2.2",
     "semver": "^5.4.1",
     "serve-favicon": "^2.4.5",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "winston": "^3.1.0"
   },
   "scripts": {
     "dev:client": "DEBUG=app NODE_ENV=development npm run locale && webpack --config webpack.dev.js --progress",
