--- a/jest.config.json
+++ b/jest.config.json
@@ -13,9 +13,7 @@
   },
   "coverageDirectory": "./coverage/",
   "collectCoverageFrom": [
-    "src/{components,containers}/**/*.{js,jsx}",
-    "src/utils/*.js",
-    "!**/node_modules/**"
+    "src/{components}/**/*.{js,jsx}"
   ],
   "testPathIgnorePatterns": [
     "/node_modules/"
