--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.5",
     "mobx": "^5.1.0",
     "mobx-react": "^5.3.6",
+    "path-to-regexp": "^3.0.0",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
     "query-string": "^6.2.0",
