refactor: Add Form serializer
Add query-string shim
Fix runtime, credential page crash in safari v10

--- a/.babelrc
+++ b/.babelrc
@@ -23,7 +23,10 @@
         "root": [
           "./",
           "./src"
-        ]
+        ],
+        "alias": {
+          "@lib": "./lib"
+        }
       }
     ],
     "lodash",
