--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "clipboard": "^2.0.1",
     "dayjs": "^1.7.4",
     "debug": "^3.1.0",
-    "deepmerge": "^2.1.0",
     "file-saver": "^2.0.0",
     "history": "^4.7.2",
     "i18next": "^11.3.3",
@@ -111,12 +110,12 @@
     "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.6",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "lint-staged": "^7.0.4",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
@@ -133,6 +132,8 @@
     "webpack": "4.17.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "3.1.0",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
     "webpack-notifier": "^1.7.0"
   },
