--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "lodash": "^4.17.5",
+    "mitt": "^1.1.3",
     "mobx": "^5.1.0",
     "mobx-react": "^5.3.6",
     "path-to-regexp": "^3.0.0",
