--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^4.2.2",
     "semver": "^5.4.1",
     "serve-favicon": "^2.4.5",
+    "socket.io": "^2.2.0",
     "superagent": "^3.8.3",
     "winston": "^3.1.0"
   },
