--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "^3.1.0",
     "file-saver": "^2.0.0",
     "history": "^4.7.2",
+    "http-proxy": "^1.17.0",
     "i18next": "^11.3.3",
     "i18next-browser-languagedetector": "^2.2.3",
     "js-base64": "^2.4.5",
@@ -25,6 +26,7 @@
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "lodash": "^4.17.5",
+    "mitt": "^1.1.3",
     "mobx": "^5.1.0",
     "mobx-react": "^5.3.6",
     "path-to-regexp": "^3.0.0",
