--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-i18next": "^7.7.0",
     "react-markdown": "^3.3.4",
     "react-modal": "^3.3.1",
-    "react-popper": ">=0.10",
+    "react-popper": "^0.10.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "semver": "^5.4.1",
