--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "autoprefixer": "7.1.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-css-modules-transform": "^1.5.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
@@ -114,7 +114,7 @@
     "file-loader": "^1.1.6",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "lint-staged": "^7.0.4",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.5.3",
@@ -129,7 +129,7 @@
     "sass-loader": "^6.0.6",
     "standard-version": "^4.4.0",
     "style-loader": "^0.19.1",
-    "url-loader": "0.5.9",
+    "url-loader": "^1.1.2",
     "webpack": "4.29.5",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "3.2.3",
