--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "dev": "cross-env npm-run-all -p watch:locale dev:serve 'dev:client -- --watch'",
     "clean:dev": "rimraf build",
     "clean:prod": "rimraf dist",
-    "prod:build": "cross-env npm run clean:prod && npm run locale && NODE_ENV=production webpack -p --config webpack.prod.js",
-    "prod:serve": "cross-env NODE_ENV=production node dist/server.js",
-    "prod": "cross-env npm run prod:build && npm run prod:serve",
+    "prod:build": "npm run clean:prod && npm run locale && NODE_ENV=production webpack -p --config webpack.prod.js",
+    "prod:serve": "NODE_ENV=production node dist/server.js",
+    "prod": "npm run prod:build && npm run prod:serve",
     "build:prod-client": "node build.js --prod-client",
     "build:prod-server": "node build.js --prod-server",
     "lint-fix": "eslint --fix --ext js,jsx .",
