--- a/package.json
+++ b/package.json
@@ -47,17 +47,26 @@
     "semver": "^5.4.1",
     "serve-favicon": "^2.4.5",
     "superagent": "^3.8.3",
+    "superagent-mock": "^3.7.0",
     "winston": "^3.1.0"
   },
   "scripts": {
     "dev:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress",
     "dev:serve": "cross-env DEBUG_DEPTH=5 DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
+    "test:serve": "cross-env DEBUG_DEPTH=5 DEBUG=test BABEL_ENV=server NODE_ENV=development MOCKAPI=1 nodemon -w lib -w server server/server.js",
     "dev": "cross-env npm-run-all -p watch:locale dev:serve 'dev:client -- --watch'",
     "prod:build": "rimraf dist && npm run locale && NODE_ENV=production webpack -p --config webpack.prod.js --progress",
     "prod:serve": "NODE_ENV=production node dist/server.js",
     "prod": "npm run prod:build && npm run prod:serve",
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
+    "e2e:test:fetch": "start-server-and-test dev:serve 8000 cy:fetchData",
+    "e2e:test:open": "start-server-and-test test:serve 8000 cy:open",
+    "e2e:test:run": "start-server-and-test test:serve 8000 cy:run",
+    "cy:open": "cypress open",
+    "cy:fetchData": "cypress open --env forceAPIRecording=1",
+    "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6",
+    "cy:verify": "cypress verify",
     "precommit": "lint-staged",
     "viz:bundle": "webpack --config webpack.dev.js --profile --json > build/stats.json && webpack-bundle-analyzer build/stats.json",
     "report-cov": "cat ./build/coverage/lcov.info | codecov",
@@ -91,6 +100,7 @@
       "src/components/**/*.jsx"
     ],
     "testPathIgnorePatterns": [
+      "/cypress/",
       "/node_modules/"
     ]
   },
@@ -105,6 +115,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@commitlint/cli": "^7.0.0",
+    "@cypress/webpack-preprocessor": "^4.0.3",
     "autoprefixer": "7.1.2",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^24.1.0",
@@ -120,12 +131,14 @@
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
+    "cypress": "^3.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-loader": "^2.1.0",
+    "eslint-plugin-cypress": "^2.2.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.6",
@@ -145,6 +158,8 @@
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
+    "standard-version": "^4.4.0",
+    "start-server-and-test": "^1.9.0",
     "style-loader": "^0.19.1",
     "url-loader": "^1.1.2",
     "webpack": "4.29.5",
