chore: Speed up webpack build
Refactor directory structure

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,14 +7,13 @@ yarn-debug.log
 npm-debug.log
 
 build/
-coverage/
 docs/
 dist/
 
 yarn-offline-cache.tgz
 
-reports/
-tests/
+test/
+tmp/
 
 .eslintignore
 .eslintrc.js
