chore: standard-version cant generate changelog from commit range

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "viz:bundle": "webpack --config webpack.dev.js --profile --json > build/stats.json && webpack-bundle-analyzer build/stats.json",
     "report-cov": "cat ./build/coverage/lcov.info | codecov",
     "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS",
-    "release": "standard-version -i CHANGELOG.md -n",
+    "changelog": "changelog -u https://github.com/openpitrix/dashboard",
     "locale": "DEBUG=locale ./src/bin/locale.js merge all",
     "watch:locale": "cross-env npm run locale -- --watch"
   },
@@ -129,6 +129,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.6",
+    "generate-changelog": "^1.7.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
@@ -144,7 +145,6 @@
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
-    "standard-version": "^4.4.0",
     "style-loader": "^0.19.1",
     "url-loader": "^1.1.2",
     "webpack": "4.29.5",
