--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.4.2",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.1.5",
-    "app-root-path": "^2.0.1",
+    "@babel/runtime": "^7.4.5",
+    "app-root-path": "^2.2.1",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
     "clipboard": "^2.0.1",
-    "dayjs": "^1.7.4",
+    "dayjs": "^1.8.14",
     "debug": "^3.1.0",
-    "file-saver": "^2.0.0",
-    "history": "^4.7.2",
+    "file-saver": "^2.0.2",
+    "history": "^4.9.0",
     "http-proxy": "^1.17.0",
     "i18next": "^15.0.7",
     "i18next-browser-languagedetector": "^2.2.3",
@@ -20,24 +20,24 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
-    "koa-helmet": "^4.0.0",
+    "koa-helmet": "^4.2.0",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.3.0",
-    "koa-session": "^5.8.1",
+    "koa-session": "^5.12.0",
     "koa-static": "^4.0.2",
     "lodash": "^4.17.5",
     "mitt": "^1.1.3",
-    "mobx": "^5.1.0",
+    "mobx": "^5.10.0",
     "mobx-react": "^5.3.6",
     "path-to-regexp": "^3.0.0",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
-    "rc-table": "^6.1.2",
+    "rc-table": "^6.6.0",
     "rc-tree": "^1.14.8",
-    "react": "^16.6.0",
+    "react": "^16.8.6",
     "react-codemirror": "^1.0.0",
-    "react-dom": "^16.6.0",
-    "react-i18next": "^10.5.1",
+    "react-dom": "^16.8.6",
+    "react-i18next": "^10.11.0",
     "react-markdown": "^3.3.4",
     "react-modal": "^3.3.1",
     "react-popper": "^0.10.4",
@@ -105,66 +105,66 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "^7.4.4",
     "@commitlint/cli": "^7.0.0",
-    "@cypress/webpack-preprocessor": "^4.0.3",
+    "@cypress/webpack-preprocessor": "^4.1.0",
     "autoprefixer": "7.1.2",
     "babel-eslint": "^8.0.2",
-    "babel-jest": "^24.1.0",
-    "babel-loader": "^8.0.4",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.5.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
     "cache-loader": "^3.0.0",
-    "codecov": "^3.0.2",
-    "commander": "^2.19.0",
+    "codecov": "^3.5.0",
+    "commander": "^2.20.0",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
-    "cypress": "^3.2.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.6.0",
+    "cypress": "^3.3.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.1",
-    "eslint": "^5.9.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-react": "^7.13.0",
     "file-loader": "^1.1.6",
     "generate-changelog": "^1.7.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.1.0",
+    "jest": "^24.8.0",
     "lint-staged": "^7.0.4",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.18.7",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
-    "prettier": "^1.12.1",
-    "react-test-renderer": "^16.2.0",
+    "prettier": "^1.17.1",
+    "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "standard-version": "^4.4.0",
-    "start-server-and-test": "^1.9.0",
-    "style-loader": "^0.19.1",
+    "start-server-and-test": "^1.9.1",
+    "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "4.29.5",
+    "webpack": "^4.33.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "3.2.3",
+    "webpack-cli": "^3.3.2",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
